# synapse-auto-add-aw-team

./: README.md  pyproject.toml  setup.cfg  tox.ini
scripts-dev/: lint.sh
synapse_auto_add_aw_team/: __init__.py
tests/: __init__.py  test_accept_invite.py
