[build-system]
requires = ["setuptools", "wheel", "appwrite==1.2.0", "requests"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = [
    "synapse_auto_add_aw_team",
    "tests"
]

[project]
name = "synapse_auto_add_aw_team"
version = "1.0"

dependencies = [
    "appwrite==1.2.0",
    "requests"
]
